# navi403

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  GETTING_STARTED.md  README.md  alembic.ini  bootstrap.ps1  docker-compose.yml  model_profiles.json  pyproject.toml  start.bat  stop.bat
.lattice/: config.json  context.md  ids.json
.lattice/events/: _lifecycle.jsonl  task_01KTHTQKDHR5H54JW5JGCSW5DT.jsonl  task_01KTHV22QZN99N6P6WZHGNCYAY.jsonl  task_01KTHY65HWDTVY48BW36JXXEAK.jsonl  task_01KTJ00NX63XMMMRJ0T18MM3S7.jsonl  task_01KTJ1WWDWMB5M651FFP337PR1.jsonl  task_01KTJ2G66EPJFCXW9YVF4X9WTQ.jsonl  task_01KTJN46Y26SN50Q0T4WT2JJ8M.jsonl  task_01KTJVNNCYCKAJ435NRT63E614.jsonl  task_01KTJWC60HPQC1F1M4S2QNR89M.jsonl  task_01KTJXNGP2DCXE8QQYZMWJWCZW.jsonl  task_01KTK28GR9D6A64JQG8Z4ZAHVM.jsonl  task_01KTN98DSJ5DPPDFJPDGZK1RDF.jsonl  task_01KTQ0EDTBYDFHXBZJ0KBSQGNW.jsonl  task_01KTQ0EE1MNEN1N03177WHGK07.jsonl  task_01KTQ0EEA0H01KM43RFXE43GZ0.jsonl  task_01KTX4514R0YQCAJ3PW2G52VJX.jsonl  (+5 more)
core_documents/: navi_MVP_Build_Spec.md  navi_Master_Design_Document_v2.md
docs/: sap_role_naming.md  sap_sod_conflicts.md
migrations/: env.py
tests/: _fakes.py  conftest.py  test_ask.py  test_broker.py  test_cli.py  test_eval_budget.py  test_eval_egress.py  test_eval_injection.py  test_eval_routing.py  test_eval_tool_permission.py  test_health.py  test_loop.py  test_memory.py  test_router.py  test_runs_list.py  test_sap_review.py  test_static_ui.py  test_tools.py  test_trace.py
web/: eslint.config.js  index.html  package-lock.json  vite.config.ts
(+89 files in other folders)
