[project]
name = "navi"
version = "0.1.0"
description = "Navi — read-only Technical Workbench AI backend (FastAPI + Postgres) behind a deterministic tool broker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/navi"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
